// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`UpdateContact > should render responsive 1`] = `
<DocumentFragment>
  <div
    class="overflow-overlay fixed inset-0 z-50 flex w-full overflow-y-hidden bg-theme-secondary-900-rgba bg-opacity-60 dark:bg-black-rgba dark:bg-opacity-80 md:py-20"
    data-testid="Modal__overlay"
  >
    <div
      class="css-1jzz0qm"
      tabindex="-1"
    >
      <div
        class="relative flex min-h-full flex-col overflow-hidden bg-theme-background shadow-2xl sm:mb-0 md:h-auto md:rounded-2.5xl px-8 pb-24 pt-8 sm:pb-8"
        data-testid="Modal__inner"
      >
        <div
          class="absolute right-0 top-0 z-10 mr-4 mt-4 rounded bg-theme-primary-100 transition-all duration-100 ease-linear hover:bg-theme-primary-300 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400 md:mr-8 md:mt-8"
        >
          <button
            class="h-8 w-8 css-1hei9vx"
            data-testid="Modal__close-button"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="css-v0ob3f"
                height="16"
                width="16"
              >
                <svg
                  id="cross"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  >
                    <path
                      d="M.954 18.981l18-18M18.954 18.981l-18-18"
                    />
                  </g>
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative flex flex-1 flex-col space-y-1.5"
        >
          <h2
            class="mb-0 text-lg font-bold md:text-2xl"
          >
            Edit Contact
          </h2>
          <div
            class="flex flex-1 flex-col"
          >
            <div
              class="mt-8"
            >
              <form
                class="space-y-5"
                data-testid="contact-form"
              >
                <fieldset
                  class="flex min-w-0 flex-col css-1bcidjh"
                >
                  <label
                    class="FormLabel mb-2 flex text-sm font-semibold leading-[17px] text-theme-secondary-text transition-colors duration-100"
                    data-testid="FormLabel"
                    for="name"
                  >
                    Name
                  </label>
                  <div
                    class=" css-n1b0kl"
                  >
                    <div
                      class="relative flex h-full flex-1"
                    >
                      <input
                        autocomplete="off"
                        class="no-ligatures w-full border-none css-1vs1awz"
                        data-testid="contact-form__name-input"
                        name="name"
                        type="text"
                        value="Brian"
                      />
                    </div>
                  </div>
                </fieldset>
                <div
                  class="css-1t71j9b"
                >
                  <fieldset
                    class="flex min-w-0 flex-col css-1bcidjh"
                  >
                    <label
                      class="FormLabel mb-2 flex text-sm font-semibold leading-[17px] text-theme-secondary-text transition-colors duration-100"
                      data-testid="FormLabel"
                      for="network"
                    >
                      Cryptoasset
                    </label>
                    <div
                      class="relative w-full"
                      data-testid="SelectDropdown"
                    >
                      <div
                        class="sr-only css-n1b0kl"
                      >
                        <div
                          class="relative flex h-full flex-1"
                        >
                          <input
                            autocomplete="off"
                            class="no-ligatures w-full border-none css-1vs1awz"
                            data-testid="select-list__input"
                            name="network"
                            readonly=""
                            tabindex="-1"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                      <div
                        class="w-full"
                      >
                        <div
                          aria-expanded="false"
                          aria-haspopup="listbox"
                          aria-owns="downshift-0-menu"
                          role="combobox"
                        >
                          <div>
                            <label
                              for="downshift-0-input"
                              id="downshift-0-label"
                            />
                            <div
                              class="css-n1b0kl"
                            >
                              <div
                                class="relative flex h-full flex-1"
                              >
                                <input
                                  aria-autocomplete="list"
                                  aria-controls="downshift-0-menu"
                                  aria-labelledby="downshift-0-label"
                                  autocomplete="off"
                                  class="no-ligatures w-full border-none cursor-default css-1vs1awz"
                                  data-testid="SelectDropdown__input"
                                  id="downshift-0-input"
                                  name="network"
                                  placeholder="Enter a cryptoasset name"
                                  type="text"
                                  value=""
                                />
                              </div>
                              <div
                                class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                                data-testid="Input__addon-end"
                              >
                                <div
                                  class=""
                                >
                                  <div
                                    class="flex items-center"
                                  >
                                    <div
                                      class="flex items-center justify-center px-1 py-2"
                                      data-testid="SelectDropdown__caret"
                                    >
                                      <div
                                        class="absolute inset-0 block cursor-pointer md:hidden"
                                      />
                                      <div
                                        class="transition-transform text-theme-secondary-500 css-15txs7d"
                                        height="10"
                                        width="10"
                                      >
                                        <svg
                                          id="caret-down"
                                          viewBox="0 0 10 10"
                                          x="0"
                                          xml:space="preserve"
                                          xmlns="http://www.w3.org/2000/svg"
                                          y="0"
                                        >
                                          <path
                                            d="M9.093 1.5H.907c-.754 0-1.178.859-.714 1.447l4.108 5.208a.91.91 0 0 0 1.43-.002l4.078-5.208c.46-.589.037-1.445-.716-1.445z"
                                            fill="currentColor"
                                          />
                                        </svg>
                                      </div>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                          <div
                            aria-labelledby="downshift-0-label"
                            id="downshift-0-menu"
                            role="listbox"
                          />
                        </div>
                      </div>
                    </div>
                  </fieldset>
                  <fieldset
                    class="flex min-w-0 flex-col css-1bcidjh"
                    data-testid="ContactForm__address"
                  >
                    <label
                      class="FormLabel mb-2 flex text-sm font-semibold leading-[17px] text-theme-secondary-text transition-colors duration-100"
                      data-testid="FormLabel"
                      for="address"
                    >
                      Address
                    </label>
                    <div
                      class="css-n1b0kl"
                    >
                      <div
                        class="relative flex h-full flex-1"
                      >
                        <input
                          autocomplete="off"
                          class="no-ligatures w-full border-none css-1vs1awz"
                          data-testid="contact-form__address-input"
                          name="address"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                  </fieldset>
                  <div
                    class="mt-4"
                  >
                    <button
                      class="w-full css-qrwjsp"
                      data-testid="contact-form__add-address-btn"
                      disabled=""
                      type="button"
                    >
                      <div
                        class="flex items-center space-x-2"
                      >
                        Add Address
                      </div>
                    </button>
                  </div>
                </div>
                <div
                  class="group"
                >
                  <span
                    class="inline-block text-sm font-semibold text-theme-secondary-text transition-colors duration-100 group-hover:text-theme-primary-600"
                  >
                    Addresses
                  </span>
                  <div
                    data-testid="contact-form__address-list"
                  >
                    <div
                      class="flex items-center border-b border-dashed border-theme-secondary-300 py-1 last:border-b-0 last:pb-0 dark:border-theme-secondary-800 sm:py-4"
                      data-testid="contact-form__address-list-item"
                    >
                      <div
                        class="mr-2 sm:mr-4"
                      >
                        <div
                          class="flex items-center space-x-2"
                        >
                          <div
                            aria-label="ARK Devnet"
                            class="inline-flex h-5 w-5 items-center justify-center text-theme-secondary-700 border-theme-secondary-300 dark:border-theme-secondary-700"
                            data-testid="NetworkIcon-ARK-ark.devnet"
                          >
                            <div
                              class="css-1i4b0eq"
                              data-testid="NetworkIcon__icon"
                              height="20"
                              width="20"
                            >
                              <svg
                                id="ark"
                                viewBox="0 0 36.3 30.6"
                                x="0"
                                xml:space="preserve"
                                xmlns="http://www.w3.org/2000/svg"
                                y="0"
                              >
                                <path
                                  d="M18.2 10.7L0 30.6 18.2 0l18.1 30.6-18.1-19.9zM10 24.2l2.9-3.2h10.6l2.9 3.2H10zm5-5.4l3.2-3.4 3.2 3.4H15z"
                                  fill="currentColor"
                                />
                              </svg>
                            </div>
                          </div>
                          <div
                            class="shrink-0 css-1yk316i"
                            data-testid="Avatar"
                          >
                            <div
                              class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
                            >
                              <img
                                alt="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                                src="data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" class="picasso" width="100" height="100" viewBox="0 0 100 100"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill="rgb(233, 30, 99)" width="100" height="100"/><circle r="50" cx="60" cy="40" fill="rgb(139, 195, 74)"/><circle r="45" cx="0" cy="30" fill="rgb(0, 188, 212)"/><circle r="40" cx="90" cy="50" fill="rgb(255, 193, 7)"/></svg>"
                                title="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                              />
                            </div>
                          </div>
                        </div>
                      </div>
                      <span
                        class="flex-1 truncate font-semibold"
                      >
                        <div
                          class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                        >
                          <span
                            class="no-ligatures min-w-0 overflow-hidden text-theme-text font-semibold text-base"
                            data-testid="Address__address"
                          >
                            D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib
                          </span>
                        </div>
                      </span>
                      <button
                        class="flex items-center text-theme-danger-400 css-1hei9vx"
                        data-testid="contact-form__remove-address-btn"
                        type="button"
                      >
                        <div
                          class="flex items-center space-x-2"
                        >
                          <div
                            class="css-v0ob3f"
                            height="16"
                            width="16"
                          >
                            <svg
                              id="trash"
                              viewBox="0 0 20 20"
                              x="0"
                              xml:space="preserve"
                              xmlns="http://www.w3.org/2000/svg"
                              y="0"
                            >
                              <g
                                fill="none"
                                stroke="currentColor"
                                stroke-linecap="round"
                                stroke-linejoin="round"
                                stroke-width="2"
                              >
                                <path
                                  d="M1 3.629h18M11.8 1H8c-.7 0-1.3.607-1.3 1.315h0v1.314H13V2.315C13 1.607 12.5 1 11.8 1h0zM8 14.449v-6.37M11.8 14.449v-6.37M15.7 17.787c-.1.707-.6 1.213-1.3 1.213H5.3c-.7 0-1.2-.506-1.3-1.213L2.9 3.629h14l-1.2 14.158z"
                                />
                              </g>
                            </svg>
                          </div>
                        </div>
                      </button>
                    </div>
                  </div>
                </div>
                <div
                  class="flex w-full border-0 border-theme-secondary-300 dark:border-theme-secondary-800 sm:border-t justify-between"
                >
                  <div
                    class="css-j6ajdm"
                  >
                    <button
                      class="css-6419sw"
                      data-testid="contact-form__cancel-btn"
                      type="button"
                    >
                      <div
                        class="flex items-center space-x-2"
                      >
                        Cancel
                      </div>
                    </button>
                    <button
                      class="css-fl4fi0"
                      data-testid="contact-form__save-btn"
                      type="submit"
                    >
                      <div
                        class="flex items-center space-x-2"
                      >
                        Save
                      </div>
                    </button>
                  </div>
                </div>
              </form>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`UpdateContact > should render responsive 2`] = `
<DocumentFragment>
  <div
    class="overflow-overlay fixed inset-0 z-50 flex w-full overflow-y-hidden bg-theme-secondary-900-rgba bg-opacity-60 dark:bg-black-rgba dark:bg-opacity-80 md:py-20"
    data-testid="Modal__overlay"
  >
    <div
      class="css-1jzz0qm"
      tabindex="-1"
    >
      <div
        class="relative flex min-h-full flex-col overflow-hidden bg-theme-background shadow-2xl sm:mb-0 md:h-auto md:rounded-2.5xl px-8 pb-24 pt-8 sm:pb-8"
        data-testid="Modal__inner"
      >
        <div
          class="absolute right-0 top-0 z-10 mr-4 mt-4 rounded bg-theme-primary-100 transition-all duration-100 ease-linear hover:bg-theme-primary-300 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400 md:mr-8 md:mt-8"
        >
          <button
            class="h-8 w-8 css-1hei9vx"
            data-testid="Modal__close-button"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="css-v0ob3f"
                height="16"
                width="16"
              >
                <svg
                  id="cross"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  >
                    <path
                      d="M.954 18.981l18-18M18.954 18.981l-18-18"
                    />
                  </g>
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative flex flex-1 flex-col space-y-1.5"
        >
          <h2
            class="mb-0 text-lg font-bold md:text-2xl"
          >
            Edit Contact
          </h2>
          <div
            class="flex flex-1 flex-col"
          >
            <div
              class="mt-8"
            >
              <form
                class="space-y-5"
                data-testid="contact-form"
              >
                <fieldset
                  class="flex min-w-0 flex-col css-1bcidjh"
                >
                  <label
                    class="FormLabel mb-2 flex text-sm font-semibold leading-[17px] text-theme-secondary-text transition-colors duration-100"
                    data-testid="FormLabel"
                    for="name"
                  >
                    Name
                  </label>
                  <div
                    class=" css-n1b0kl"
                  >
                    <div
                      class="relative flex h-full flex-1"
                    >
                      <input
                        autocomplete="off"
                        class="no-ligatures w-full border-none css-1vs1awz"
                        data-testid="contact-form__name-input"
                        name="name"
                        type="text"
                        value="Brian"
                      />
                    </div>
                  </div>
                </fieldset>
                <div
                  class="css-1t71j9b"
                >
                  <fieldset
                    class="flex min-w-0 flex-col css-1bcidjh"
                  >
                    <label
                      class="FormLabel mb-2 flex text-sm font-semibold leading-[17px] text-theme-secondary-text transition-colors duration-100"
                      data-testid="FormLabel"
                      for="network"
                    >
                      Cryptoasset
                    </label>
                    <div
                      class="relative w-full"
                      data-testid="SelectDropdown"
                    >
                      <div
                        class="sr-only css-n1b0kl"
                      >
                        <div
                          class="relative flex h-full flex-1"
                        >
                          <input
                            autocomplete="off"
                            class="no-ligatures w-full border-none css-1vs1awz"
                            data-testid="select-list__input"
                            name="network"
                            readonly=""
                            tabindex="-1"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                      <div
                        class="w-full"
                      >
                        <div
                          aria-expanded="false"
                          aria-haspopup="listbox"
                          aria-owns="downshift-2-menu"
                          role="combobox"
                        >
                          <div>
                            <label
                              for="downshift-2-input"
                              id="downshift-2-label"
                            />
                            <div
                              class="css-n1b0kl"
                            >
                              <div
                                class="relative flex h-full flex-1"
                              >
                                <input
                                  aria-autocomplete="list"
                                  aria-controls="downshift-2-menu"
                                  aria-labelledby="downshift-2-label"
                                  autocomplete="off"
                                  class="no-ligatures w-full border-none cursor-default css-1vs1awz"
                                  data-testid="SelectDropdown__input"
                                  id="downshift-2-input"
                                  name="network"
                                  placeholder="Enter a cryptoasset name"
                                  type="text"
                                  value=""
                                />
                              </div>
                              <div
                                class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                                data-testid="Input__addon-end"
                              >
                                <div
                                  class=""
                                >
                                  <div
                                    class="flex items-center"
                                  >
                                    <div
                                      class="flex items-center justify-center px-1 py-2"
                                      data-testid="SelectDropdown__caret"
                                    >
                                      <div
                                        class="absolute inset-0 block cursor-pointer md:hidden"
                                      />
                                      <div
                                        class="transition-transform text-theme-secondary-500 css-15txs7d"
                                        height="10"
                                        width="10"
                                      >
                                        <svg
                                          id="caret-down"
                                          viewBox="0 0 10 10"
                                          x="0"
                                          xml:space="preserve"
                                          xmlns="http://www.w3.org/2000/svg"
                                          y="0"
                                        >
                                          <path
                                            d="M9.093 1.5H.907c-.754 0-1.178.859-.714 1.447l4.108 5.208a.91.91 0 0 0 1.43-.002l4.078-5.208c.46-.589.037-1.445-.716-1.445z"
                                            fill="currentColor"
                                          />
                                        </svg>
                                      </div>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                          <div
                            aria-labelledby="downshift-2-label"
                            id="downshift-2-menu"
                            role="listbox"
                          />
                        </div>
                      </div>
                    </div>
                  </fieldset>
                  <fieldset
                    class="flex min-w-0 flex-col css-1bcidjh"
                    data-testid="ContactForm__address"
                  >
                    <label
                      class="FormLabel mb-2 flex text-sm font-semibold leading-[17px] text-theme-secondary-text transition-colors duration-100"
                      data-testid="FormLabel"
                      for="address"
                    >
                      Address
                    </label>
                    <div
                      class="css-n1b0kl"
                    >
                      <div
                        class="relative flex h-full flex-1"
                      >
                        <input
                          autocomplete="off"
                          class="no-ligatures w-full border-none css-1vs1awz"
                          data-testid="contact-form__address-input"
                          name="address"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                  </fieldset>
                  <div
                    class="mt-4"
                  >
                    <button
                      class="w-full css-qrwjsp"
                      data-testid="contact-form__add-address-btn"
                      disabled=""
                      type="button"
                    >
                      <div
                        class="flex items-center space-x-2"
                      >
                        Add Address
                      </div>
                    </button>
                  </div>
                </div>
                <div
                  class="group"
                >
                  <span
                    class="inline-block text-sm font-semibold text-theme-secondary-text transition-colors duration-100 group-hover:text-theme-primary-600"
                  >
                    Addresses
                  </span>
                  <div
                    data-testid="contact-form__address-list"
                  >
                    <div
                      class="flex items-center border-b border-dashed border-theme-secondary-300 py-1 last:border-b-0 last:pb-0 dark:border-theme-secondary-800 sm:py-4"
                      data-testid="contact-form__address-list-item"
                    >
                      <div
                        class="mr-2 sm:mr-4"
                      >
                        <div
                          class="flex items-center -space-x-1"
                        >
                          <div
                            aria-label="ARK Devnet"
                            class="text-theme-secondary-700 border-theme-secondary-300 dark:border-theme-secondary-700 ring-theme-background duration-100 css-1nqcsx"
                            data-testid="NetworkIcon-ARK-ark.devnet"
                          >
                            <div
                              class="css-1i4b0eq"
                              data-testid="NetworkIcon__icon"
                              height="20"
                              width="20"
                            >
                              <svg
                                id="ark"
                                viewBox="0 0 36.3 30.6"
                                x="0"
                                xml:space="preserve"
                                xmlns="http://www.w3.org/2000/svg"
                                y="0"
                              >
                                <path
                                  d="M18.2 10.7L0 30.6 18.2 0l18.1 30.6-18.1-19.9zM10 24.2l2.9-3.2h10.6l2.9 3.2H10zm5-5.4l3.2-3.4 3.2 3.4H15z"
                                  fill="currentColor"
                                />
                              </svg>
                            </div>
                          </div>
                          <div
                            class="shrink-0 css-1n9jllj"
                            data-testid="Avatar"
                          >
                            <div
                              class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
                            >
                              <img
                                alt="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                                src="data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" class="picasso" width="100" height="100" viewBox="0 0 100 100"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill="rgb(233, 30, 99)" width="100" height="100"/><circle r="50" cx="60" cy="40" fill="rgb(139, 195, 74)"/><circle r="45" cx="0" cy="30" fill="rgb(0, 188, 212)"/><circle r="40" cx="90" cy="50" fill="rgb(255, 193, 7)"/></svg>"
                                title="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                              />
                            </div>
                          </div>
                        </div>
                      </div>
                      <span
                        class="flex-1 truncate font-semibold"
                      >
                        <div
                          class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                        >
                          <span
                            class="no-ligatures min-w-0 overflow-hidden text-theme-text font-semibold text-base"
                            data-testid="Address__address"
                          >
                            D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib
                          </span>
                        </div>
                      </span>
                      <button
                        class="flex items-center flex items-center css-qemr9e"
                        data-testid="contact-form__remove-address-btn"
                        type="button"
                      >
                        <div
                          class="flex items-center space-x-2"
                        >
                          <div
                            class="css-v0ob3f"
                            height="16"
                            width="16"
                          >
                            <svg
                              id="trash"
                              viewBox="0 0 20 20"
                              x="0"
                              xml:space="preserve"
                              xmlns="http://www.w3.org/2000/svg"
                              y="0"
                            >
                              <g
                                fill="none"
                                stroke="currentColor"
                                stroke-linecap="round"
                                stroke-linejoin="round"
                                stroke-width="2"
                              >
                                <path
                                  d="M1 3.629h18M11.8 1H8c-.7 0-1.3.607-1.3 1.315h0v1.314H13V2.315C13 1.607 12.5 1 11.8 1h0zM8 14.449v-6.37M11.8 14.449v-6.37M15.7 17.787c-.1.707-.6 1.213-1.3 1.213H5.3c-.7 0-1.2-.506-1.3-1.213L2.9 3.629h14l-1.2 14.158z"
                                />
                              </g>
                            </svg>
                          </div>
                        </div>
                      </button>
                    </div>
                  </div>
                </div>
                <div
                  class="flex w-full border-0 border-theme-secondary-300 dark:border-theme-secondary-800 sm:border-t justify-between"
                >
                  <button
                    class="mt-0 h-min sm:mt-8 css-15yk9k4"
                    data-testid="contact-form__delete-btn"
                    type="button"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      <div
                        class="css-v0ob3f"
                        height="16"
                        width="16"
                      >
                        <svg
                          id="trash"
                          viewBox="0 0 20 20"
                          x="0"
                          xml:space="preserve"
                          xmlns="http://www.w3.org/2000/svg"
                          y="0"
                        >
                          <g
                            fill="none"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="2"
                          >
                            <path
                              d="M1 3.629h18M11.8 1H8c-.7 0-1.3.607-1.3 1.315h0v1.314H13V2.315C13 1.607 12.5 1 11.8 1h0zM8 14.449v-6.37M11.8 14.449v-6.37M15.7 17.787c-.1.707-.6 1.213-1.3 1.213H5.3c-.7 0-1.2-.506-1.3-1.213L2.9 3.629h14l-1.2 14.158z"
                            />
                          </g>
                        </svg>
                      </div>
                      <span>
                        Delete Contact
                      </span>
                    </div>
                  </button>
                  <div
                    class="css-j6ajdm"
                  >
                    <button
                      class="css-6419sw"
                      data-testid="contact-form__cancel-btn"
                      type="button"
                    >
                      <div
                        class="flex items-center space-x-2"
                      >
                        Cancel
                      </div>
                    </button>
                    <button
                      class="css-fl4fi0"
                      data-testid="contact-form__save-btn"
                      type="submit"
                    >
                      <div
                        class="flex items-center space-x-2"
                      >
                        Save
                      </div>
                    </button>
                  </div>
                </div>
              </form>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`UpdateContact > should render responsive 3`] = `
<DocumentFragment>
  <div
    class="overflow-overlay fixed inset-0 z-50 flex w-full overflow-y-hidden bg-theme-secondary-900-rgba bg-opacity-60 dark:bg-black-rgba dark:bg-opacity-80 md:py-20"
    data-testid="Modal__overlay"
  >
    <div
      class="css-1jzz0qm"
      tabindex="-1"
    >
      <div
        class="relative flex min-h-full flex-col overflow-hidden bg-theme-background shadow-2xl sm:mb-0 md:h-auto md:rounded-2.5xl px-8 pb-24 pt-8 sm:pb-8"
        data-testid="Modal__inner"
      >
        <div
          class="absolute right-0 top-0 z-10 mr-4 mt-4 rounded bg-theme-primary-100 transition-all duration-100 ease-linear hover:bg-theme-primary-300 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400 md:mr-8 md:mt-8"
        >
          <button
            class="h-8 w-8 css-1hei9vx"
            data-testid="Modal__close-button"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="css-v0ob3f"
                height="16"
                width="16"
              >
                <svg
                  id="cross"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  >
                    <path
                      d="M.954 18.981l18-18M18.954 18.981l-18-18"
                    />
                  </g>
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative flex flex-1 flex-col space-y-1.5"
        >
          <h2
            class="mb-0 text-lg font-bold md:text-2xl"
          >
            Edit Contact
          </h2>
          <div
            class="flex flex-1 flex-col"
          >
            <div
              class="whitespace-pre-line pr-10 text-sm text-theme-secondary-text md:pr-0 md:text-base"
            >
              Enter the information below to update or delete the Contact.
            </div>
            <div
              class="mt-8"
            >
              <form
                class="space-y-5"
                data-testid="contact-form"
              >
                <fieldset
                  class="flex min-w-0 flex-col css-1bcidjh"
                >
                  <label
                    class="FormLabel mb-2 flex text-sm font-semibold leading-[17px] text-theme-secondary-text transition-colors duration-100"
                    data-testid="FormLabel"
                    for="name"
                  >
                    Name
                  </label>
                  <div
                    class=" css-n1b0kl"
                  >
                    <div
                      class="relative flex h-full flex-1"
                    >
                      <input
                        autocomplete="off"
                        class="no-ligatures w-full border-none css-1vs1awz"
                        data-testid="contact-form__name-input"
                        name="name"
                        type="text"
                        value="Brian"
                      />
                    </div>
                  </div>
                </fieldset>
                <div
                  class="css-1t71j9b"
                >
                  <fieldset
                    class="flex min-w-0 flex-col css-1bcidjh"
                  >
                    <label
                      class="FormLabel mb-2 flex text-sm font-semibold leading-[17px] text-theme-secondary-text transition-colors duration-100"
                      data-testid="FormLabel"
                      for="network"
                    >
                      Cryptoasset
                    </label>
                    <div
                      class="relative w-full"
                      data-testid="SelectDropdown"
                    >
                      <div
                        class="sr-only css-n1b0kl"
                      >
                        <div
                          class="relative flex h-full flex-1"
                        >
                          <input
                            autocomplete="off"
                            class="no-ligatures w-full border-none css-1vs1awz"
                            data-testid="select-list__input"
                            name="network"
                            readonly=""
                            tabindex="-1"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                      <div
                        class="w-full"
                      >
                        <div
                          aria-expanded="false"
                          aria-haspopup="listbox"
                          aria-owns="downshift-4-menu"
                          role="combobox"
                        >
                          <div>
                            <label
                              for="downshift-4-input"
                              id="downshift-4-label"
                            />
                            <div
                              class="css-n1b0kl"
                            >
                              <div
                                class="relative flex h-full flex-1"
                              >
                                <input
                                  aria-autocomplete="list"
                                  aria-controls="downshift-4-menu"
                                  aria-labelledby="downshift-4-label"
                                  autocomplete="off"
                                  class="no-ligatures w-full border-none cursor-default css-1vs1awz"
                                  data-testid="SelectDropdown__input"
                                  id="downshift-4-input"
                                  name="network"
                                  placeholder="Enter a cryptoasset name"
                                  type="text"
                                  value=""
                                />
                              </div>
                              <div
                                class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                                data-testid="Input__addon-end"
                              >
                                <div
                                  class=""
                                >
                                  <div
                                    class="flex items-center"
                                  >
                                    <div
                                      class="flex items-center justify-center px-1 py-2"
                                      data-testid="SelectDropdown__caret"
                                    >
                                      <div
                                        class="absolute inset-0 block cursor-pointer md:hidden"
                                      />
                                      <div
                                        class="transition-transform text-theme-secondary-500 css-15txs7d"
                                        height="10"
                                        width="10"
                                      >
                                        <svg
                                          id="caret-down"
                                          viewBox="0 0 10 10"
                                          x="0"
                                          xml:space="preserve"
                                          xmlns="http://www.w3.org/2000/svg"
                                          y="0"
                                        >
                                          <path
                                            d="M9.093 1.5H.907c-.754 0-1.178.859-.714 1.447l4.108 5.208a.91.91 0 0 0 1.43-.002l4.078-5.208c.46-.589.037-1.445-.716-1.445z"
                                            fill="currentColor"
                                          />
                                        </svg>
                                      </div>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                          <div
                            aria-labelledby="downshift-4-label"
                            id="downshift-4-menu"
                            role="listbox"
                          />
                        </div>
                      </div>
                    </div>
                  </fieldset>
                  <fieldset
                    class="flex min-w-0 flex-col css-1bcidjh"
                    data-testid="ContactForm__address"
                  >
                    <label
                      class="FormLabel mb-2 flex text-sm font-semibold leading-[17px] text-theme-secondary-text transition-colors duration-100"
                      data-testid="FormLabel"
                      for="address"
                    >
                      Address
                    </label>
                    <div
                      class="css-n1b0kl"
                    >
                      <div
                        class="relative flex h-full flex-1"
                      >
                        <input
                          autocomplete="off"
                          class="no-ligatures w-full border-none css-1vs1awz"
                          data-testid="contact-form__address-input"
                          name="address"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                  </fieldset>
                  <div
                    class="mt-4"
                  >
                    <button
                      class="w-full css-qrwjsp"
                      data-testid="contact-form__add-address-btn"
                      disabled=""
                      type="button"
                    >
                      <div
                        class="flex items-center space-x-2"
                      >
                        Add Address
                      </div>
                    </button>
                  </div>
                </div>
                <div
                  class="group"
                >
                  <span
                    class="inline-block text-sm font-semibold text-theme-secondary-text transition-colors duration-100 group-hover:text-theme-primary-600"
                  >
                    Addresses
                  </span>
                  <div
                    data-testid="contact-form__address-list"
                  >
                    <div
                      class="flex items-center border-b border-dashed border-theme-secondary-300 py-1 last:border-b-0 last:pb-0 dark:border-theme-secondary-800 sm:py-4"
                      data-testid="contact-form__address-list-item"
                    >
                      <div
                        class="mr-2 sm:mr-4"
                      >
                        <div
                          class="flex items-center -space-x-1"
                        >
                          <div
                            aria-label="ARK Devnet"
                            class="text-theme-secondary-700 border-theme-secondary-300 dark:border-theme-secondary-700 ring-theme-background duration-100 css-1nqcsx"
                            data-testid="NetworkIcon-ARK-ark.devnet"
                          >
                            <div
                              class="css-1i4b0eq"
                              data-testid="NetworkIcon__icon"
                              height="20"
                              width="20"
                            >
                              <svg
                                id="ark"
                                viewBox="0 0 36.3 30.6"
                                x="0"
                                xml:space="preserve"
                                xmlns="http://www.w3.org/2000/svg"
                                y="0"
                              >
                                <path
                                  d="M18.2 10.7L0 30.6 18.2 0l18.1 30.6-18.1-19.9zM10 24.2l2.9-3.2h10.6l2.9 3.2H10zm5-5.4l3.2-3.4 3.2 3.4H15z"
                                  fill="currentColor"
                                />
                              </svg>
                            </div>
                          </div>
                          <div
                            class="shrink-0 css-1n9jllj"
                            data-testid="Avatar"
                          >
                            <div
                              class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
                            >
                              <img
                                alt="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                                src="data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" class="picasso" width="100" height="100" viewBox="0 0 100 100"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill="rgb(233, 30, 99)" width="100" height="100"/><circle r="50" cx="60" cy="40" fill="rgb(139, 195, 74)"/><circle r="45" cx="0" cy="30" fill="rgb(0, 188, 212)"/><circle r="40" cx="90" cy="50" fill="rgb(255, 193, 7)"/></svg>"
                                title="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                              />
                            </div>
                          </div>
                        </div>
                      </div>
                      <span
                        class="flex-1 truncate font-semibold"
                      >
                        <div
                          class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                        >
                          <span
                            class="no-ligatures min-w-0 overflow-hidden text-theme-text font-semibold text-base"
                            data-testid="Address__address"
                          >
                            D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib
                          </span>
                        </div>
                      </span>
                      <button
                        class="flex items-center flex items-center css-qemr9e"
                        data-testid="contact-form__remove-address-btn"
                        type="button"
                      >
                        <div
                          class="flex items-center space-x-2"
                        >
                          <div
                            class="css-v0ob3f"
                            height="16"
                            width="16"
                          >
                            <svg
                              id="trash"
                              viewBox="0 0 20 20"
                              x="0"
                              xml:space="preserve"
                              xmlns="http://www.w3.org/2000/svg"
                              y="0"
                            >
                              <g
                                fill="none"
                                stroke="currentColor"
                                stroke-linecap="round"
                                stroke-linejoin="round"
                                stroke-width="2"
                              >
                                <path
                                  d="M1 3.629h18M11.8 1H8c-.7 0-1.3.607-1.3 1.315h0v1.314H13V2.315C13 1.607 12.5 1 11.8 1h0zM8 14.449v-6.37M11.8 14.449v-6.37M15.7 17.787c-.1.707-.6 1.213-1.3 1.213H5.3c-.7 0-1.2-.506-1.3-1.213L2.9 3.629h14l-1.2 14.158z"
                                />
                              </g>
                            </svg>
                          </div>
                        </div>
                      </button>
                    </div>
                  </div>
                </div>
                <div
                  class="flex w-full border-0 border-theme-secondary-300 dark:border-theme-secondary-800 sm:border-t justify-between"
                >
                  <button
                    class="mt-0 h-min sm:mt-8 css-15yk9k4"
                    data-testid="contact-form__delete-btn"
                    type="button"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      <div
                        class="css-v0ob3f"
                        height="16"
                        width="16"
                      >
                        <svg
                          id="trash"
                          viewBox="0 0 20 20"
                          x="0"
                          xml:space="preserve"
                          xmlns="http://www.w3.org/2000/svg"
                          y="0"
                        >
                          <g
                            fill="none"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="2"
                          >
                            <path
                              d="M1 3.629h18M11.8 1H8c-.7 0-1.3.607-1.3 1.315h0v1.314H13V2.315C13 1.607 12.5 1 11.8 1h0zM8 14.449v-6.37M11.8 14.449v-6.37M15.7 17.787c-.1.707-.6 1.213-1.3 1.213H5.3c-.7 0-1.2-.506-1.3-1.213L2.9 3.629h14l-1.2 14.158z"
                            />
                          </g>
                        </svg>
                      </div>
                      <span>
                        Delete Contact
                      </span>
                    </div>
                  </button>
                  <div
                    class="css-j6ajdm"
                  >
                    <button
                      class="css-6419sw"
                      data-testid="contact-form__cancel-btn"
                      type="button"
                    >
                      <div
                        class="flex items-center space-x-2"
                      >
                        Cancel
                      </div>
                    </button>
                    <button
                      class="css-fl4fi0"
                      data-testid="contact-form__save-btn"
                      type="submit"
                    >
                      <div
                        class="flex items-center space-x-2"
                      >
                        Save
                      </div>
                    </button>
                  </div>
                </div>
              </form>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
